@startuml

title 享元模式类图

class FlyweightFactory {
    + getFlyweight(intrinsicState)
}

abstract class Flyweight {
    - String intrinsicState
    + operation(extrinsicState)
}

class ConcreteFlyweight {

}

Flyweight <|-- ConcreteFlyweight

FlyweightFactory o..> Flyweight

class Client

Client --> ConcreteFlyweight
Client --> FlyweightFactory

@enduml